Rifattorizza la gestione delle risposte in GetHandler e PostHandler; introduce il metodo handleResponse in Service per semplificare il codice e migliora la validazione dei parametri in Service